miniscule change for better readability

--- a/popup.html
+++ b/popup.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div class="setting-group">
-    <label for="keywordEngine">Search Engine for Keywords:</label>
+    <label for="keywordEngine">Search Engine for Keywords</label>
     <select id="keywordEngine">
       <option value="google">Google</option>
       <option value="bing">Bing</option>
@@ -45,7 +45,7 @@
     </select>
   </div>
   <div class="setting-group">
-    <label for="questionEngine">Search Engine for Questions:</label>
+    <label for="questionEngine">Search Engine for Questions</label>
     <select id="questionEngine">
       <option value="perplexity">Perplexity</option>
       <option value="google">Google</option>
